# jmsd_component_with_tests

./: CMakeLists.txt  README.md
_cmake_settings/: component-lib-set-compiler-settings.cmake  component-test-lib-set-compiler-settings.cmake  component-tests-set-compiler-settings.cmake
component_lib/: CMakeLists.txt
component_test_lib/: CMakeLists.txt
component_tests/: CMakeLists.txt
sources/component_lib/: component_lib.h  component_lib_sls.h
sources/component_lib/jmsdl/component/: component_lib_class.cpp  component_lib_class.h  component_lib_function.c  component_lib_function.h
sources/component_test_lib/: component_test_lib.h  component_test_lib_sls.h
sources/component_test_lib/jmsdl/component/: component_test_lib_class.cpp  component_test_lib_class.h  component_test_lib_function.c  component_test_lib_function.h
sources/component_tests/: component_tests_main_entry.cpp
